--- a/src/app/card-form/card-form.component.html
+++ b/src/app/card-form/card-form.component.html
@@ -6,3 +6,7 @@
 <div>Form contents: {{ cardForm.value | json }}</div>
 <!--takes an object and prints out  JSON.-->
 <div>Form is valid: {{ cardForm.valid }}</div>
+
+<!--Check Validation Errors-->
+<div>Errors around name: {{ cardForm.controls["name"].errors | json }}</div>
+<div>Same errors: {{ cardForm.get("name")?.errors | json }}</div>
