--- a/src/app/card-form/card-form.component.html
+++ b/src/app/card-form/card-form.component.html
@@ -1,6 +1,12 @@
 <form [formGroup]="cardForm">
   <input formControlName="name" />
-  <ng-container *ngIf="cardForm.controls['name'].errors">
+  <ng-container
+    *ngIf="
+      cardForm.controls['name'].dirty &&
+      cardForm.controls['name'].touched &&
+      cardForm.controls['name'].errors
+    "
+  >
     <div *ngIf="cardForm.controls['name'].errors['required']">
       Value is required.
     </div>
