--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,20 +1,32 @@
-<input [formControl]="control" />
-<!--register the control in the template, bind control property from TS into this form control field-->
-
-<ng-container *ngIf="control.dirty && control.touched && control.errors">
-  <div *ngIf="control.errors['required']">Value is required.</div>
-  <div *ngIf="control.errors['minlength']">
-    Value you entered is
-    {{control.errors?.['minlength'].actualLength}}
-    characters, but it must be at least
-    {{control.errors?.['minlength'].requiredLength}} long.
+<div class="field">
+  <label class="label">{{ label }}</label>
+  <div class="control">
+    <input
+      class="input"
+      [formControl]="control"
+      [ngClass]="{ 'is-danger': showErrors() }"
+    />
+    <!--register the control in the template, bind control property from TS into this form control field-->
   </div>
-  <!-- Add extra validation messages to make the input more reusable  -->
-  <div *ngIf="control.errors['maxlength']">
-    Value you entered is
-    {{control.errors?.['maxlength'].actualLength}}
-    characters long, but it can't be longer than
-    {{control.errors?.['maxlength'].requiredLength}} charachers.
-  </div>
-  <div *ngIf="control.errors?.['pattern']">Invalid character pattern</div>
-</ng-container>
+  <ng-container *ngIf="showErrors()">
+    <div class="help is-danger" *ngIf="control?.errors?.['required']">
+      Value is required.
+    </div>
+    <div class="help is-danger" *ngIf="control?.errors?.['minlength']">
+      Value you entered is
+      {{control.errors?.['minlength'].actualLength}}
+      characters, but it must be at least
+      {{control.errors?.['minlength'].requiredLength}} long.
+    </div>
+    <!-- Add extra validation messages to make the input more reusable  -->
+    <div class="help is-danger" *ngIf="control?.errors?.['maxlength']">
+      Value you entered is
+      {{control.errors?.['maxlength'].actualLength}}
+      characters long, but it can't be longer than
+      {{control.errors?.['maxlength'].requiredLength}} charachers.
+    </div>
+    <div class="help is-danger" *ngIf="control.errors?.['pattern']">
+      Invalid format
+    </div>
+  </ng-container>
+</div>
