create new class that extends and overwrite FormControl class for input masking

--- a/src/app/card-form/card-form.component.html
+++ b/src/app/card-form/card-form.component.html
@@ -6,7 +6,7 @@
     [control]="$any(cardForm.get('cardNumber'))"
   ></app-input>
   <app-input
-    label="Expiration"
+    label="Expiration (MM/YY)"
     [control]="$any(cardForm.get('expiration'))"
   ></app-input>
   <app-input
