add reset button for clearing the form

--- a/src/app/card-form/card-form.component.html
+++ b/src/app/card-form/card-form.component.html
@@ -16,6 +16,9 @@
   <button type="submit" class="button is-primary" [disabled]="cardForm.invalid">
     Submit
   </button>
+  <button type="button" class="button is-danger" (click)="onResetClick()">
+    Reset
+  </button>
 </form>
 
 <!--For Debugging -->
