--- a/src/app/card-form/card-form.component.html
+++ b/src/app/card-form/card-form.component.html
@@ -1,35 +1,47 @@
-<form [formGroup]="cardForm" (ngSubmit)="onSubmit()">
+<form class="form" [formGroup]="cardForm" (ngSubmit)="onSubmit()">
   <!--property binding, to pass down data (FormControl) from parent to child-->
   <app-input label="Name" [control]="$any(cardForm.get('name'))"></app-input>
   <app-input
     label="Card Number"
     [control]="$any(cardForm.get('cardNumber'))"
   ></app-input>
-  <app-input
-    label="Expiration (MM/YY)"
-    [control]="$any(cardForm.get('expiration'))"
-  ></app-input>
-  <app-input
-    label="Security Code"
-    [control]="$any(cardForm.get('securityCode'))"
-  ></app-input>
-  <button type="submit" class="button is-primary" [disabled]="cardForm.invalid">
-    Submit
-  </button>
-  <button type="button" class="button is-danger" (click)="onResetClick()">
-    Reset
-  </button>
+  <div class="columns">
+    <div class="column">
+      <app-input
+        label="Expiration (MM/YY)"
+        [control]="$any(cardForm.get('expiration'))"
+      ></app-input>
+    </div>
+    <div class="column">
+      <app-input
+        label="Security Code"
+        [control]="$any(cardForm.get('securityCode'))"
+      ></app-input>
+    </div>
+  </div>
+  <div class="buttons">
+    <button
+      type="submit"
+      class="button is-primary"
+      [disabled]="cardForm.invalid"
+    >
+      Submit
+    </button>
+    <button type="button" class="button is-danger" (click)="onResetClick()">
+      Reset
+    </button>
+  </div>
 </form>
 
-<!--For Debugging -->
-<div>Form contents: {{ cardForm.value | json }}</div>
-<!--takes an object and prints out  JSON.-->
-<div>Form is valid: {{ cardForm.valid }}</div>
+<!-- For Debugging -->
+<!-- <div>Form is valid: {{ cardForm.valid }}</div> -->
+<!-- <div>Form contents: {{ cardForm.value | json }}</div> -->
+<!-- json pipe: takes an object and prints out  JSON.-->
 
 <!--Check Validation Errors-->
-<div>Errors around name: {{ cardForm.controls["name"].errors | json }}</div>
+<!-- <div>Errors around name: {{ cardForm.controls["name"].errors | json }}</div>
 <div>Same errors: {{ cardForm.get("name")?.errors | json }}</div>
 <div>
   MinLength properties:
   {{ cardForm.controls["name"].errors?.['minlength'] | json }}
-</div>
+</div> -->
